EXTRA_DIST +=	\
	dev-utils/plugin_skeleton_creator	\
	dev-utils/plugin_skeleton_creator/create_plugin.sh	\
	dev-utils/plugin_skeleton_creator/plugin_template_CMakeLists.txt	\
	dev-utils/plugin_skeleton_creator/plugin_template_grammar.ym	\
	dev-utils/plugin_skeleton_creator/plugin_template_Makefile.am	\
	dev-utils/plugin_skeleton_creator/plugin_template_parser.c	\
	dev-utils/plugin_skeleton_creator/plugin_template_parser.h	\
	dev-utils/plugin_skeleton_creator/plugin_template_plugin.c
